# idlesync

./: Cargo.toml  README.md
src/: conf.rs  errors.rs  main.rs
